--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -1016,7 +1016,65 @@
       "used_rate": "使用费率",
       "commission_amount": "佣金金额",
       "withholding_rate": "预扣率",
-      "code": "代码"
+       "code": "代码"
+    },
+    "claims": {
+      "opening": {
+        "claim_opening": "索赔开立",
+        "product": "产品",
+        "select_product": "选择产品",
+        "policy": "保单",
+        "select_policy": "选择保单",
+        "loss_date": "损失日期",
+        "select_date": "选择日期",
+        "loss_time": "损失时间",
+        "select_time": "选择时间",
+        "risk": "风险",
+        "select_risk": "选择风险",
+        "notification_date": "通知日期",
+        "causation": "原因",
+        "select_causation": "选择原因",
+        "catastrophe_event": "灾难/事件",
+        "select_catastrophe_event": "选择灾难/事件",
+        "claim_description": "索赔描述",
+        "enter_claim_description": "输入索赔描述",
+        "party_to_blame": "责任方",
+        "select_party_to_blame": "选择责任方",
+        "average_basic_salary": "平均基本工资",
+        "enter_average_basic_salary": "输入平均基本工资",
+        "average_earnings": "平均收入",
+        "enter_average_earnings": "输入平均收入",
+        "off_duty_date_from": "停工日期从",
+        "off_duty_date_to": "停工日期至",
+        "liability_admission": "责任承认",
+        "next_review_date": "下次审查日期",
+        "next_review_user": "下次审查用户",
+        "select_next_review_user": "选择下次审查用户",
+        "priority_level": "优先级",
+        "select_priority_level": "选择优先级",
+        "reference_number": "参考编号",
+        "enter_reference_number": "输入参考编号",
+        "accident_location": "事故地点",
+        "enter_accident_location": "输入事故地点",
+        "add_peril": "添加风险",
+        "peril": "风险",
+        "claim_estimate": "索赔估算",
+        "actions": "操作",
+        "edit": "编辑",
+        "delete": "删除",
+        "capture_claim": "捕获索赔",
+        "insured_as_claimant": "被保险人作为索赔人",
+        "claimant": "索赔人",
+        "create_claimant": "创建索赔人",
+        "peril_details": "风险详情", 
+        "select_peril": "选择风险", 
+        "enter_claim_estimate": "输入索赔估计", 
+        "cancel": "取消",
+        "save": "保存",
+        "edit_peril": "编辑风险", 
+        "confirm_delete_peril": "您确定要删除此风险吗？", 
+        "enter_peril": "输入风险"
+      }
     }
   },
   "lms": {
