--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -983,42 +983,101 @@
       "peril_id": "ID",
       "previous": "Vorherige",
 
-      "select_required_documents": "Erforderliche Dokumente auswählen",
-      "edit_required_documents": "Erforderliche Dokumente bearbeiten",
-      "certificates": "Zertifikate",
-      "select_user_certifacte_iot": "Benutzerzertifikats-Lot auswählen",
-      "cert_no": "Zertifikatsnummer",
-      "lot_id": "Los-ID",
-      "issue_date": "Ausgabedatum",
-      "cert_year": "Zertifikatsjahr",
-      "status": "Status",
-      "print_status": "Druckstatus",
-      "print_date": "Druckdatum",
-      "wef": "Gültig ab",
-      "select_certifiactes": "Zertifikate auswählen",
-      "cert_type": "Zertifikatstyp",
-      "lots_id": "Los-ID",
-      "certificate_details": "Zertifikatsdetails",
-      "certificate": "Zertifikat",
-      "active": "Aktiv",
-      "cancelled": "Storniert",
-      "inactive": "Inaktiv",
-      "wet": "Nass",
-      "remark": "Bemerkung",
-      "created_date": "Erstellungsdatum",
-      "add_remarks": "Bemerkungen hinzufügen",
-      "edit_remarks": "Bemerkungen bearbeiten",
-      "related_risks": "Verwandte Risiken",
-      "property_id": "Eigentums-ID",
-      "commission_transaction": "Provisionsgeschäft",
-      "agent_name": "Agentenname",
-      "account_type": "Kontotyp",
-      "setup_rate": "Einrichtungsrate",
-      "used_rate": "Verwendete Rate",
-      "commission_amount": "Provisionsbetrag",
-      "withholding_rate": "Einbehaltungsrate",
-      "code": "Code"
-    }
+    "select_required_documents": "Erforderliche Dokumente auswählen",
+    "edit_required_documents": "Erforderliche Dokumente bearbeiten",
+    "certificates": "Zertifikate",
+    "select_user_certifacte_iot": "Benutzerzertifikats-Lot auswählen",
+    "cert_no": "Zertifikatsnummer",
+    "lot_id": "Los-ID",
+    "issue_date": "Ausgabedatum",
+    "cert_year": "Zertifikatsjahr",
+    "status": "Status",
+    "print_status": "Druckstatus",
+    "print_date": "Druckdatum",
+    "wef": "Gültig ab",
+    "select_certifiactes": "Zertifikate auswählen",
+    "cert_type": "Zertifikatstyp",
+    "lots_id": "Los-ID",
+    "certificate_details": "Zertifikatsdetails",
+    "certificate": "Zertifikat",
+    "active": "Aktiv",
+    "cancelled": "Storniert",
+    "inactive": "Inaktiv",
+    "wet": "Nass",
+    "remark": "Bemerkung",
+    "created_date": "Erstellungsdatum",
+    "add_remarks": "Bemerkungen hinzufügen",
+    "edit_remarks": "Bemerkungen bearbeiten",
+    "related_risks": "Verwandte Risiken",
+    "property_id": "Eigentums-ID",
+    "commission_transaction": "Provisionsgeschäft",
+    "agent_name": "Agentenname",
+    "account_type": "Kontotyp",
+    "setup_rate": "Einrichtungsrate",
+    "used_rate": "Verwendete Rate",
+    "commission_amount": "Provisionsbetrag",
+    "withholding_rate": "Einbehaltungsrate",
+    "code": "Code"
+    },
+  "claims": {
+  "opening": {
+    "claim_opening": "Schadensmeldung",
+    "product": "Produkt",
+    "select_product": "Produkt auswählen",
+    "policy": "Versicherungspolice",
+    "select_policy": "Versicherungspolice auswählen",
+    "loss_date": "Verlustdatum",
+    "select_date": "Datum auswählen",
+    "loss_time": "Verlustzeit",
+    "select_time": "Zeit auswählen",
+    "risk": "Risiko",
+    "select_risk": "Risiko auswählen",
+    "notification_date": "Benachrichtigungsdatum",
+    "causation": "Ursache",
+    "select_causation": "Ursache auswählen",
+    "catastrophe_event": "Katastrophe/Ereignis",
+    "select_catastrophe_event": "Katastrophe/Ereignis auswählen",
+    "claim_description": "Schadenbeschreibung",
+    "enter_claim_description": "Schadenbeschreibung eingeben",
+    "party_to_blame": "Verantwortliche Partei",
+    "select_party_to_blame": "Verantwortliche Partei auswählen",
+    "average_basic_salary": "Durchschnittliches Grundgehalt",
+    "enter_average_basic_salary": "Durchschnittliches Grundgehalt eingeben",
+    "average_earnings": "Durchschnittliche Einnahmen",
+    "enter_average_earnings": "Durchschnittliche Einnahmen eingeben",
+    "off_duty_date_from": "Abwesenheitsdatum Von",
+    "off_duty_date_to": "Abwesenheitsdatum Bis",
+    "liability_admission": "Haftungsanerkennung",
+    "next_review_date": "Nächstes Überprüfungsdatum",
+    "next_review_user": "Nächster Überprüfungsbenutzer",
+    "select_next_review_user": "Nächster Überprüfungsbenutzer auswählen",
+    "priority_level": "Prioritätsstufe",
+    "select_priority_level": "Prioritätsstufe auswählen",
+    "reference_number": "Referenznummer",
+    "enter_reference_number": "Referenznummer eingeben",
+    "accident_location": "Unfallort",
+    "enter_accident_location": "Unfallort eingeben",
+    "add_peril": "Gefahr hinzufügen",
+    "peril": "Gefahr",
+    "claim_estimate": "Schätzung des Schadens",
+    "actions": "Aktionen",
+    "edit": "Bearbeiten",
+    "delete": "Löschen",
+    "capture_claim": "Schaden erfassen",
+    "insured_as_claimant": "Versicherter als Kläger",
+    "claimant": "Kläger",
+    "create_claimant": "Kläger erstellen",
+    "peril_details": "Details zur Gefahr",
+    "select_peril": "Gefahr auswählen",
+    "enter_claim_estimate": "Schätzung des Schadens eingeben",
+    "cancel": "Abbrechen",
+    "save": "Speichern",
+    "edit_peril": "Bewerk Gevaar", 
+    "confirm_delete_peril": "Weet u zeker dat u dit gevaar wilt verwijderen?",
+    "enter_peril": "Voer Gevaar in"
+  }
+}
+
   },
   "lms": {
     "common": {},
