--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -983,41 +983,99 @@
       "peril_id": "ID",
       "previous": "Anterior",
 
-      "select_required_documents": "Seleccionar documentos requeridos",
-      "edit_required_documents": "Editar documentos requeridos",
-      "certificates": "Certificados",
-      "select_user_certifacte_iot": "Seleccionar lote de certificados de usuario",
-      "cert_no": "No. de certificado",
-      "lot_id": "ID del lote",
-      "issue_date": "Fecha de emisión",
-      "cert_year": "Año del certificado",
-      "status": "Estado",
-      "print_status": "Estado de impresión",
-      "print_date": "Fecha de impresión",
-      "wef": "Desde",
-      "select_certifiactes": "Seleccionar certificados",
-      "cert_type": "Tipo de certificado",
-      "lots_id": "ID de lotes",
-      "certificate_details": "Detalles del certificado",
-      "certificate": "Certificado",
-      "active": "Activo",
-      "cancelled": "Cancelado",
-      "inactive": "Inactivo",
-      "wet": "Húmedo",
-      "remark": "Observación",
-      "created_date": "Fecha de creación",
-      "add_remarks": "Agregar observaciones",
-      "edit_remarks": "Editar observaciones",
-      "related_risks": "Riesgos relacionados",
-      "property_id": "ID de la propiedad",
-      "commission_transaction": "Transacción de comisión",
-      "agent_name": "Nombre del agente",
-      "account_type": "Tipo de cuenta",
-      "setup_rate": "Tasa de configuración",
-      "used_rate": "Tasa utilizada",
-      "commission_amount": "Monto de la comisión",
-      "withholding_rate": "Tasa de retención",
-      "code": "Código"
+  "select_required_documents": "Seleccionar documentos requeridos",
+  "edit_required_documents": "Editar documentos requeridos",
+  "certificates": "Certificados",
+  "select_user_certifacte_iot": "Seleccionar lote de certificados de usuario",
+  "cert_no": "No. de certificado",
+  "lot_id": "ID del lote",
+  "issue_date": "Fecha de emisión",
+  "cert_year": "Año del certificado",
+  "status": "Estado",
+  "print_status": "Estado de impresión",
+  "print_date": "Fecha de impresión",
+  "wef": "Desde",
+  "select_certifiactes": "Seleccionar certificados",
+  "cert_type": "Tipo de certificado",
+  "lots_id": "ID de lotes",
+  "certificate_details": "Detalles del certificado",
+  "certificate": "Certificado",
+  "active": "Activo",
+  "cancelled": "Cancelado",
+  "inactive": "Inactivo",
+  "wet": "Húmedo",
+  "remark": "Observación",
+  "created_date": "Fecha de creación",
+  "add_remarks": "Agregar observaciones",
+  "edit_remarks": "Editar observaciones",
+  "related_risks": "Riesgos relacionados",
+  "property_id": "ID de la propiedad",
+  "commission_transaction": "Transacción de comisión",
+  "agent_name": "Nombre del agente",
+  "account_type": "Tipo de cuenta",
+  "setup_rate": "Tasa de configuración",
+  "used_rate": "Tasa utilizada",
+  "commission_amount": "Monto de la comisión",
+  "withholding_rate": "Tasa de retención",
+   "code": "Código"
+    },
+    "claims": {
+      "opening": {
+        "claim_opening": "Apertura de Reclamación",
+        "product": "Producto",
+        "select_product": "Seleccionar Producto",
+        "policy": "Póliza",
+        "select_policy": "Seleccionar Póliza",
+        "loss_date": "Fecha de Pérdida",
+        "select_date": "Seleccionar Fecha",
+        "loss_time": "Hora de Pérdida",
+        "select_time": "Seleccionar Hora",
+        "risk": "Riesgo",
+        "select_risk": "Seleccionar Riesgo",
+        "notification_date": "Fecha de Notificación",
+        "causation": "Causación",
+        "select_causation": "Seleccionar Causación",
+        "catastrophe_event": "Catástrofe/Evento",
+        "select_catastrophe_event": "Seleccionar Catástrofe/Evento",
+        "claim_description": "Descripción de la Reclamación",
+        "enter_claim_description": "Ingresar Descripción de la Reclamación",
+        "party_to_blame": "Parte Culpable",
+        "select_party_to_blame": "Seleccionar Parte Culpable",
+        "average_basic_salary": "Salario Básico Promedio",
+        "enter_average_basic_salary": "Ingresar Salario Básico Promedio",
+        "average_earnings": "Ganancias Promedio",
+        "enter_average_earnings": "Ingresar Ganancias Promedio",
+        "off_duty_date_from": "Fecha de Incapacidad Desde",
+        "off_duty_date_to": "Fecha de Incapacidad Hasta",
+        "liability_admission": "Admisión de Responsabilidad",
+        "next_review_date": "Próxima Fecha de Revisión",
+        "next_review_user": "Próximo Usuario de Revisión",
+        "select_next_review_user": "Seleccionar Próximo Usuario de Revisión",
+        "priority_level": "Nivel de Prioridad",
+        "select_priority_level": "Seleccionar Nivel de Prioridad",
+        "reference_number": "Número de Referencia",
+        "enter_reference_number": "Ingresar Número de Referencia",
+        "accident_location": "Ubicación del Accidente",
+        "enter_accident_location": "Ingresar Ubicación del Accidente",
+        "add_peril": "Agregar Riesgo",
+        "peril": "Riesgo",
+        "claim_estimate": "Estimación de la Reclamación",
+        "actions": "Acciones",
+        "edit": "Editar",
+        "delete": "Eliminar",
+        "capture_claim": "Capturar Reclamación",
+        "insured_as_claimant": "Asegurado como Reclamante",
+        "claimant": "Reclamante",
+        "create_claimant": "Crear Reclamante",
+        "peril_details": "Detalles del Riesgo", 
+        "select_peril": "Seleccionar Riesgo",
+        "enter_claim_estimate": "Ingrese Estimación de Reclamación", 
+        "cancel": "Cancelar",
+        "save": "Guardar",
+        "edit_peril": "Editar Riesgo", 
+        "confirm_delete_peril": "¿Está seguro de que desea eliminar este riesgo?",  
+        "enter_peril": "Ingrese Riesgo" 
+      }
     }
   },
   "lms": {
