--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -983,42 +983,100 @@
       "peril_id": "ID",
       "previous": "Précédent",
 
-      "select_required_documents": "Sélectionner les documents requis",
-      "edit_required_documents": "Modifier les documents requis",
-      "certificates": "Certificats",
-      "select_user_certifacte_iot": "Sélectionner le lot de certificats utilisateur",
-      "cert_no": "N° de certificat",
-      "lot_id": "ID du lot",
-      "issue_date": "Date d'émission",
-      "cert_year": "Année du certificat",
-      "status": "Statut",
-      "print_status": "Statut de l'impression",
-      "print_date": "Date d'impression",
-      "wef": "WEF",
-      "select_certifiactes": "Sélectionner les certificats",
-      "cert_type": "Type de certificat",
-      "lots_id": "ID des lots",
-      "certificate_details": "Détails du certificat",
-      "certificate": "Certificat",
-      "active": "Actif",
-      "cancelled": "Annulé",
-      "inactive": "Inactif",
-      "wet": "Mouillé",
-      "remark": "Remarque",
-      "created_date": "Date de création",
-      "add_remarks": "Ajouter des remarques",
-      "edit_remarks": "Modifier les remarques",
-      "related_risks": "Risques associés",
-      "property_id": "ID de la propriété",
-      "commission_transaction": "Transaction de commission",
-      "agent_name": "Nom de l'agent",
-      "account_type": "Type de compte",
-      "setup_rate": "Taux d'installation",
-      "used_rate": "Taux utilisé",
-      "commission_amount": "Montant de la commission",
-      "withholding_rate": "Taux de retenue",
-      "code": "Code"
+    "select_required_documents": "Sélectionner les documents requis",
+    "edit_required_documents": "Modifier les documents requis",
+    "certificates": "Certificats",
+    "select_user_certifacte_iot": "Sélectionner le lot de certificats utilisateur",
+    "cert_no": "N° de certificat",
+    "lot_id": "ID du lot",
+    "issue_date": "Date d'émission",
+    "cert_year": "Année du certificat",
+    "status": "Statut",
+    "print_status": "Statut de l'impression",
+    "print_date": "Date d'impression",
+    "wef": "WEF",
+    "select_certifiactes": "Sélectionner les certificats",
+    "cert_type": "Type de certificat",
+    "lots_id": "ID des lots",
+    "certificate_details": "Détails du certificat",
+    "certificate": "Certificat",
+    "active": "Actif",
+    "cancelled": "Annulé",
+    "inactive": "Inactif",
+    "wet": "Mouillé",
+    "remark": "Remarque",
+    "created_date": "Date de création",
+    "add_remarks": "Ajouter des remarques",
+    "edit_remarks": "Modifier les remarques",
+    "related_risks": "Risques associés",
+    "property_id": "ID de la propriété",
+    "commission_transaction": "Transaction de commission",
+    "agent_name": "Nom de l'agent",
+    "account_type": "Type de compte",
+    "setup_rate": "Taux d'installation",
+    "used_rate": "Taux utilisé",
+    "commission_amount": "Montant de la commission",
+    "withholding_rate": "Taux de retenue",
+    "code": "Code"
+    },
+"claims": {
+    "opening": {
+      "claim_opening": "Ouverture de réclamation",
+      "product": "Produit",
+      "select_product": "Sélectionner un produit",
+      "policy": "Police",
+      "select_policy": "Sélectionner une police",
+      "loss_date": "Date de la perte",
+      "select_date": "Sélectionner une date",
+      "loss_time": "Heure de la perte",
+      "select_time": "Sélectionner une heure",
+      "risk": "Risque",
+      "select_risk": "Sélectionner un risque",
+      "notification_date": "Date de notification",
+      "causation": "Causation",
+      "select_causation": "Sélectionner une causation",
+      "catastrophe_event": "Catastrophe/Événement",
+      "select_catastrophe_event": "Sélectionner une catastrophe/événement",
+      "claim_description": "Description de la réclamation",
+      "enter_claim_description": "Entrez la description de la réclamation",
+      "party_to_blame": "Partie à blâmer",
+      "select_party_to_blame": "Sélectionner la partie à blâmer",
+      "average_basic_salary": "Salaire de base moyen",
+      "enter_average_basic_salary": "Entrez le salaire de base moyen",
+      "average_earnings": "Gains moyens",
+      "enter_average_earnings": "Entrez les gains moyens",
+      "off_duty_date_from": "Date d'incapacité à partir de",
+      "off_duty_date_to": "Date d'incapacité à",
+      "liability_admission": "Admission de responsabilité",
+      "next_review_date": "Prochaine date de révision",
+      "next_review_user": "Prochain utilisateur de révision",
+      "select_next_review_user": "Sélectionner le prochain utilisateur de révision",
+      "priority_level": "Niveau de priorité",
+      "select_priority_level": "Sélectionner un niveau de priorité",
+      "reference_number": "Numéro de référence",
+      "enter_reference_number": "Entrez le numéro de référence",
+      "accident_location": "Lieu de l'accident",
+      "enter_accident_location": "Entrez le lieu de l'accident",
+      "add_peril": "Ajouter un risque",
+      "peril": "Risque",
+      "claim_estimate": "Estimation de la réclamation",
+      "actions": "Actions",
+      "edit": "Modifier",
+      "delete": "Supprimer",
+      "capture_claim": "Capturer la réclamation",
+      "insured_as_claimant": "Assuré en tant que réclamant",
+      "claimant": "Réclamant",
+      "create_claimant": "Créer un réclamant",
+      "peril_details": "Détails du péril", 
+        "select_peril": "Sélectionner un péril", 
+        "enter_claim_estimate": "Entrez l'estimation de la réclamation", 
+        "cancel": "Annuler",
+        "save": "Enregistrer",
+        "edit_peril": "Modifier le péril", 
+        "confirm_delete_peril": "Êtes-vous sûr de vouloir supprimer ce péril ?", 
+        "enter_peril": "Entrez le péril"
     }
+  }
   },
   "lms": {
     "common": {},
