--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -985,42 +985,100 @@
       "peril_id": "ID",
       "previous": "Ya awali",
 
-      "select_required_documents": "Chagua nyaraka zinazohitajika",
-      "edit_required_documents": "Hariri nyaraka zinazohitajika",
-      "certificates": "Vyeti",
-      "select_user_certifacte_iot": "Chagua cheti cha mtumiaji loti",
-      "cert_no": "Namba ya cheti",
-      "lot_id": "ID ya loti",
-      "issue_date": "Tarehe ya kutolewa",
-      "cert_year": "Mwaka wa cheti",
-      "status": "Hali",
-      "print_status": "Hali ya kuchapisha",
-      "print_date": "Tarehe ya kuchapisha",
-      "wef": "Tarehe ya kuanza",
-      "select_certifiactes": "Chagua vyeti",
-      "cert_type": "Aina ya cheti",
-      "lots_id": "ID za loti",
-      "certificate_details": "Maelezo ya cheti",
-      "certificate": "Cheti",
-      "active": "Inatumika",
-      "cancelled": "Imesitishwa",
-      "inactive": "Haifanyi kazi",
-      "wet": "Tarehe ya kumalizia",
-      "remark": "Maelezo",
-      "created_date": "Tarehe ya kuundwa",
-      "add_remarks": "Ongeza maelezo",
-      "edit_remarks": "Hariri maelezo",
-      "related_risks": "Hatari zinazohusiana",
-      "property_id": "ID ya mali",
-      "commission_transaction": "Muamala wa kamisheni",
-      "agent_name": "Jina la wakala",
-      "account_type": "Aina ya akaunti",
-      "setup_rate": "Kiwango cha usanikishaji",
-      "used_rate": "Kiwango kilichotumika",
-      "commission_amount": "Kiasi cha kamisheni",
-      "withholding_rate": "Kiwango cha kizuizi",
-      "code": "Nambari"
+  "select_required_documents": "Chagua nyaraka zinazohitajika",
+  "edit_required_documents": "Hariri nyaraka zinazohitajika",
+  "certificates": "Vyeti",
+  "select_user_certifacte_iot": "Chagua cheti cha mtumiaji loti",
+  "cert_no": "Namba ya cheti",
+  "lot_id": "ID ya loti",
+  "issue_date": "Tarehe ya kutolewa",
+  "cert_year": "Mwaka wa cheti",
+  "status": "Hali",
+  "print_status": "Hali ya kuchapisha",
+  "print_date": "Tarehe ya kuchapisha",
+  "wef": "Tarehe ya kuanza",
+  "select_certifiactes": "Chagua vyeti",
+  "cert_type": "Aina ya cheti",
+  "lots_id": "ID za loti",
+  "certificate_details": "Maelezo ya cheti",
+  "certificate": "Cheti",
+  "active": "Inatumika",
+  "cancelled": "Imesitishwa",
+  "inactive": "Haifanyi kazi",
+  "wet": "Tarehe ya kumalizia",
+  "remark": "Maelezo",
+  "created_date": "Tarehe ya kuundwa",
+  "add_remarks": "Ongeza maelezo",
+  "edit_remarks": "Hariri maelezo",
+  "related_risks": "Hatari zinazohusiana",
+  "property_id": "ID ya mali",
+  "commission_transaction": "Muamala wa kamisheni",
+  "agent_name": "Jina la wakala",
+  "account_type": "Aina ya akaunti",
+  "setup_rate": "Kiwango cha usanikishaji",
+  "used_rate": "Kiwango kilichotumika",
+  "commission_amount": "Kiasi cha kamisheni",
+  "withholding_rate": "Kiwango cha kizuizi",
+   "code": "Nambari"
+    },
+    "claims": {
+    "opening": {
+      "claim_opening": "Ufunguzi wa Madai",
+      "product": "Bidhaa",
+      "select_product": "Chagua Bidhaa",
+      "policy": "Sera",
+      "select_policy": "Chagua Sera",
+      "loss_date": "Tarehe ya Hasara",
+      "select_date": "Chagua Tarehe",
+      "loss_time": "Wakati wa Hasara",
+      "select_time": "Chagua Wakati",
+      "risk": "Hatari",
+      "select_risk": "Chagua Hatari",
+      "notification_date": "Tarehe ya Arifa",
+      "causation": "Sababu",
+      "select_causation": "Chagua Sababu",
+      "catastrophe_event": "Janga/Tukio",
+      "select_catastrophe_event": "Chagua Janga/Tukio",
+      "claim_description": "Maelezo ya Dai",
+      "enter_claim_description": "Ingiza Maelezo ya Dai",
+      "party_to_blame": "Mhusika Aliye na Hatia",
+      "select_party_to_blame": "Chagua Mhusika Aliye na Hatia",
+      "average_basic_salary": "Mshahara wa Msingi wa wastani",
+      "enter_average_basic_salary": "Ingiza Mshahara wa Msingi wa wastani",
+      "average_earnings": "Mapato ya Wastani",
+      "enter_average_earnings": "Ingiza Mapato ya Wastani",
+      "off_duty_date_from": "Tarehe ya Kupumzika Kutoka",
+      "off_duty_date_to": "Tarehe ya Kupumzika Hadi",
+      "liability_admission": "Kukubali Dhamana",
+      "next_review_date": "Tarehe ya Ukaguzi Ujao",
+      "next_review_user": "Mtumiaji wa Ukaguzi Ujao",
+      "select_next_review_user": "Chagua Mtumiaji wa Ukaguzi Ujao",
+      "priority_level": "Kipaumbele",
+      "select_priority_level": "Chagua Kipaumbele",
+      "reference_number": "Nambari ya Rejea",
+      "enter_reference_number": "Ingiza Nambari ya Rejea",
+      "accident_location": "Mahali pa Ajali",
+      "enter_accident_location": "Ingiza Mahali pa Ajali",
+      "add_peril": "Ongeza Hatari",
+      "peril": "Hatari",
+      "claim_estimate": "Makadirio ya Dai",
+      "actions": "Vitendo",
+      "edit": "Hariri",
+      "delete": "Futa",
+      "capture_claim": "Rekodi Dai",
+      "insured_as_claimant": "Asilimi kama Mdai",
+      "claimant": "Mdai",
+      "create_claimant": "Unda Mdai",
+      "peril_details": "Maelezo ya Hatari",
+      "select_peril": "Chagua Hatari",
+      "enter_claim_estimate": "Ingiza Kadirio la Dai", 
+      "cancel": "Ghairi",
+      "save": "Hifadhi",
+      "edit_peril": "Hariri Hatari",
+      "confirm_delete_peril": "Je, una uhakika unataka kufuta hatari hii?",
+      "enter_peril": "Ingiza Hatari" 
     }
+  }
   },
   "lms": {
     "common": {},
