VQ-2916/Agent individual policies and Payment UI

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1090,6 +1090,54 @@
       "outside_system": "Outside System"
     },
     "grp": {
+      "agent_portal": {
+        "policy": "Policy",
+        "policySummary": "Policy summary",
+        "policyNumber": "Policy number",
+        "clientName": "Client name",
+        "product": "Product",
+        "coverageDuration": "Coverage duration",
+        "covers": "Covers",
+        "frequencyOfPayment": "Frequency of payment",
+        "coverFrom": "Cover from",
+        "coverTo": "Cover to",
+        "sumAssured": "Sum assured",
+        "premium": "Premium",
+        "commission": "Commission",
+        "paymentOptions": "Payment options",
+        "mobile": "Mobile",
+        "card": "Card",
+        "bank": "Bank",
+        "enterMobileNumber": "Enter mobile number",
+        "selectProvider": "Select a provider to continue",
+        "redirectedToCompletePayment": "You may be redirected to another site to complete your payment",
+        "selectBank": "Select bank",
+        "referenceNumber": "Reference number",
+        "useReferenceNumber": "Use this reference number when making your bank payment",
+        "enterBankReferenceNumber": "Please enter the bank reference number",
+        "proceed": "Proceed",
+        "pushNotification": "We have sent a push notification to your phone",
+        "enterMpesaPin": "Please enter your Mpesa PIN and confirm",
+        "ok": "Ok",
+        "cancel": "Cancel",
+        "visa": "Visa",
+        "mastercard": "Mastercard",
+        "paypal": "Paypal",
+        "stripe": "Stripe",
+        "googlePay": "Google pay",
+        "myPolicies": "My policies",
+        "filterBy": "Filter by",
+        "quoteNumber": "Quote number",
+        "status": "Status",
+        "equals": "Equals",
+        "greaterThan": "Greater than",
+        "lessThan": "Less than",
+        "enterValue": "Enter value",
+        "quoteNo": "Quote no.",
+        "client": "Client",
+        "effectiveDate": "Effective date",
+        "members": "Members"
+      },
         "admin_portal": {
           "product_details": "Produt details",
           "product": "Product",
