--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1047,6 +1047,54 @@
       "yes": "Sí"
     },
     "grp": {
+      "agent_portal": {
+        "policy": "Póliza",
+        "policySummary": "Resumen de la póliza",
+        "policyNumber": "Número de póliza",
+        "clientName": "Nombre del cliente",
+        "product": "Producto",
+        "coverageDuration": "Duración de la cobertura",
+        "covers": "Cubre",
+        "frequencyOfPayment": "Frecuencia de pago",
+        "coverFrom": "Cobertura a partir de",
+        "coverTo": "Cobertura hasta",
+        "sumAssured": "Suma asegurada",
+        "premium": "Prima",
+        "commission": "Comisión",
+        "paymentOptions": "Opciones de pago",
+        "mobile": "Móvil",
+        "card": "Tarjeta",
+        "bank": "Banco",
+        "enterMobileNumber": "Ingrese el número de teléfono móvil",
+        "selectProvider": "Seleccione un proveedor para continuar",
+        "redirectedToCompletePayment": "Es posible que se le redirija a otro sitio para completar su pago",
+        "selectBank": "Seleccione un banco",
+        "referenceNumber": "Número de referencia",
+        "useReferenceNumber": "Utilice este número de referencia al realizar su pago bancario",
+        "enterBankReferenceNumber": "Ingrese el número de referencia bancaria",
+        "proceed": "Continuar",
+        "pushNotification": "Hemos enviado una notificación push a su teléfono",
+        "enterMpesaPin": "Ingrese su PIN de Mpesa y confirme",
+        "ok": "Ok",
+        "cancel": "Cancelar",
+        "visa": "Visa",
+        "mastercard": "Mastercard",
+        "paypal": "Paypal",
+        "stripe": "Stripe",
+        "googlePay": "Google Pay",
+        "myPolicies": "Mis pólizas",
+        "filterBy": "Filtrar por",
+        "quoteNumber": "Número de cotización",
+        "status": "Estado",
+        "equals": "Igual a",
+        "greaterThan": "Mayor que",
+        "lessThan": "Menor que",
+        "enterValue": "Ingrese un valor",
+        "quoteNo": "Número de cotización",
+        "client": "Cliente",
+        "effectiveDate": "Fecha de vigencia",
+        "members": "Miembros"
+      },
       "admin_portal": {
         "product_details": "Detalles del producto",
         "product": "Producto",
